--- a/src/app/Contact/homepage/homepage.component.css
+++ b/src/app/Contact/homepage/homepage.component.css
@@ -1,23 +1,331 @@
 *{
-  padding: 0;
   margin: 0;
-  font-family:Century Gothic;
+  padding: 0;
 }
-body{
+
+.main{
+  width: 100%;
+  /* background:url('src/assets/img/1.png'); */
+  /* background-position: center;
+  background-size: cover; */
+  height: 100%;
+}
 
 
-  padding:80px 10px
 
+
+/* .logo{
+  color: #0eec19;
+  font-size: 35px;
+  font-family: Arial;
+  padding-left: 20px;
+  float: left;
+  padding-top: 10px;
+  margin-top: 5px
+}
+.menu{
+  width: 700px;
+  float: left;
+  height: 70px;
+}
+ul{
+  float: left;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+ul li{
+  list-style: none;
+  margin-left: 80px;
+  margin-top: 27px;
+  font-size: 14px;
+}
+
+ul li a{
+  text-decoration: none;
+  color: #fff;
+  font-family: Arial;
+  font-weight: bold;
+  transition: 0.4s ease-in-out;
+}
+
+ul li a:hover{
+  color: #0eec19;
+} */
+
+/* .search{
+  width: 330px;
+  float: left;
+  margin-left: 270px;
+}
+
+.srch{
+  font-family: 'Times New Roman';
+  width: 200px;
+  height: 40px;
+  background: transparent;
+  border: 1px solid #0eec19;
+  margin-top: 13px;
+  color: #fff;
+  border-right: none;
+  font-size: 16px;
+  float: left;
+  padding: 10px;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+} */
+
+.btn{
+  width: 100px;
+  height: 40px;
+  background: #0eec19;
+  border: 2px solid #0eec19;
+  margin-top: 13px;
+  color: #fff;
+  font-size: 15px;
+  border-bottom-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  transition: 0.2s ease;
+  cursor: pointer;
+}
+.btn:hover{
+  color: #000;
+}
+
+.btn:focus{
+  outline: none;
+}
+
+.srch:focus{
+  outline: none;
+}
+.content{
+  width: 100%;
+  /* height:109vh; */
+  /* margin-top: 200px; */
+  color: #fff;
+  position:initial;
 
 }
-.title h1{
+.content h1{
+  font-family: 'Times New Roman';
   font-size: 50px;
-  color: rgb(255, 255, 255);
+  padding-left: 20px;
+  margin-top: 30%;
+  margin-left:0%;
+  right:100px;
+  position:relative;
+  letter-spacing: 2px;
 
 }
-hr{
-  width: 20px solid grey;
+.content .par{
+  font-family: 'Times New Roman';
+  font-size: large;
+  padding-left: 0px;
+  padding-bottom: 25px;
+  letter-spacing: 1.2px;
+  line-height: 30px;
 
+}
+
+
+
+/* .content .cn{
+  width: 160px;
+  height: 40px;
+  background: #0eec19;
+  border: none;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  font-size: 18px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: .4s ease;
+
+} */
+
+/* .content .cn a{
+  text-decoration: none;
+  color: #000;
+  transition: .3s ease;
+}
+
+.cn:hover{
+  background-color: #fff;
+} */
+
+.content span{
+  color: #0eec19;
+  font-size: 50px
+}
+
+.form{
+  width: 250px;
+  height: 400px;
+  background: linear-gradient(to top, rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%);
+  position:absolute;
+  top: 250px;
+  left: 850px;
+  transform: translate(0%,-5%);
+  border-radius: 10px;
+  padding: 25px;
+}
+
+.form h2{
+  width: 220px;
+  font-family:Arial, Helvetica, sans-serif;
+  text-align: center;
+  color: #ff7200;
+  font-size: 22px;
+  background-color: #fff;
+  border-radius: 10px;
+  margin: 2px;
+  padding: 8px;
+}
+
+.form input{
+  width: 240px;
+  height: 35px;
+  background: transparent;
+  border-bottom: 1px solid #ff7200;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  color: #fff;
+  font-size: 15px;
+  letter-spacing: 1px;
+  margin-top: 30px;
+  font-family: sans-serif;
+}
+
+.form input:focus{
+  outline: none;
+}
+
+::placeholder{
+  color: #fff;
+  font-family: Arial;
+}
+
+.btnn{
+  width: 240px;
+  height: 40px;
+  background: #0eec19;
+  border: none;
+  margin-top: 30px;
+  font-size: 18px;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #fff;
+  transition: 0.4s ease;
+}
+.btnn:hover{
+  background: #fff;
+  color: #0eec19;
+}
+.btnn a{
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
+}
+.form .link{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 17px;
+  padding-top: 40px;
+  text-align: center;
+}
+.form .link a{
+  text-decoration: none;
+  color: #0eec19;
+}
+.liw{
+  padding-top: 15px;
+  padding-bottom: 10px;
+  text-align: center;
+}
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  padding-top: 25px;
+  margin-bottom: 0px;
+  cursor: pointer;
+  font-size: 18px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.checkbox{
+  /* background-color: rgb(255, 255, 255); */
+  width:250px;
+  height:1px;
+  margin-top: 0px;
+}
+
+.checkbox input{
+  width: 15px;
+  height:15px;
+  left:90px;
+  margin-top: 20px;
+}
+.checkbox label{
+ right:100px;
+ padding-left:20px;
+}
+.forgot{
+  width: 250px;
+  height:15px;
+  margin-top:60px;
+  margin-left: 60px;
+}
+.forgot a{
+  color: #ff7200;
+}
+.features ul {
+  margin: 80px 0;
+}
+.features ul li {
+  width: 300px;
+  padding-top: 140px;
+  float: left;
+  margin-right: 10px;
+  text-align: center;
+}
+/* .features ul li .feature-1 {
+  background: url('src/assets/img/footer-background.png') no-repeat top center;
+} */
+/* .features ul li.feature-2 {
+  background: url('../images/features-icon-2.png') no-repeat top center;
+}
+.features ul li.feature-3 {
+  background: url('../images/features-icon-3.png') no-repeat top center;
+} */
+ .wrapper ul{
+  float: left;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 350px;
+}
+
+.wrapper ul li{
+  list-style: none;
+  margin-left: 80px;
+  font-size: 35px;
+}
+
+.wrapper ul li h4{
+  text-decoration: none;
+  color: #fff;
+  font-family:Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  transition: 0.4s ease-in-out;
+}
+
+.wrapper ul li h4:hover{
+  color: #fa9006fa;
 }
 
 
