--- a/src/app/Contact/register/register.component.html
+++ b/src/app/Contact/register/register.component.html
@@ -7,7 +7,7 @@
 
   <form>
     <div class="container">
-      <h1>Register</h1>
+      <h1>Register Here</h1>
       <p>Please fill in this form to create an account.</p>
       <hr>
 
@@ -23,13 +23,14 @@
       <hr>
 
 
-      <button type="submit" class="registerbtn">Register</button>
+      <button type="submit" class="registerbtn">Submit</button>
+      <div class="formend">
+        <p>Already have an account ? <a routerLink="../homepage">Sign In</a>.</p>
+
+      </div>
     </div>
 
-    <div class="container signin">
-      <p>Already have an account ? <a routerLink="../userlogin">Sign in</a>.</p>
 
-    </div>
   </form>
 
 </body>
