--- a/src/app/Contact/userlogin/userlogin.component.css
+++ b/src/app/Contact/userlogin/userlogin.component.css
@@ -31,7 +31,7 @@ form{
 }
 
 /* Full-width input fields */
-input[type=text], input[type=password] ,input[type=checkbox]{
+input[type=text], input[type=password]{
   width: 100%;
   padding: 15px ;
   margin: 15px 0 22px 0;
