--- a/src/app/Contact/contactinfo/contactinfo.component.css
+++ b/src/app/Contact/contactinfo/contactinfo.component.css
@@ -3,14 +3,18 @@
 }
 
 form{
-
+/* background: url('src/assets/img/body3.jpg'); */
+/* background-position: absolute; */
+position: absolute;
+border-radius: 10px;
   background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
-  height: 90vh;
-  margin-top: 200px;
-  margin-left: 200px;
+  height: 750px;
+  width: 500px;
+  margin-top: 100px;
+  margin-left: 350px;
   background-size: cover;
   background-position: center;
-  border:bluesolid;
+  /* border:bluesolid; */
 
 }
 /* Add padding to containers */
@@ -82,6 +86,7 @@ hr {
   font-weight: bold;
 
 }
+
 
 
 
