--- a/src/app/Contact/homepage/homepage.component.css
+++ b/src/app/Contact/homepage/homepage.component.css
@@ -1,172 +1,58 @@
 *{
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
-
+body{
+  height:102vh;
+  width:auto;
+  /* z-index: 2; */
+}
 .main{
-  width: 100%;
-  /* background:url('src/assets/img/1.png'); */
-  /* background-position: center;
-  background-size: cover; */
-  height: 100%;
-}
-
-
-
-
-/* .logo{
-  color: #0eec19;
-  font-size: 35px;
-  font-family: Arial;
-  padding-left: 20px;
-  float: left;
-  padding-top: 10px;
-  margin-top: 5px
-}
-.menu{
-  width: 700px;
-  float: left;
-  height: 70px;
-}
-ul{
-  float: left;
-  display:flex;
-  justify-content: center;
-  align-items: center;
-}
-
-ul li{
-  list-style: none;
-  margin-left: 80px;
-  margin-top: 27px;
-  font-size: 14px;
-}
-
-ul li a{
-  text-decoration: none;
-  color: #fff;
-  font-family: Arial;
-  font-weight: bold;
-  transition: 0.4s ease-in-out;
-}
-
-ul li a:hover{
-  color: #0eec19;
-} */
-
-/* .search{
-  width: 330px;
-  float: left;
-  margin-left: 270px;
-}
-
-.srch{
-  font-family: 'Times New Roman';
-  width: 200px;
-  height: 40px;
-  background: transparent;
-  border: 1px solid #0eec19;
-  margin-top: 13px;
-  color: #fff;
-  border-right: none;
-  font-size: 16px;
-  float: left;
-  padding: 10px;
-  border-bottom-left-radius: 5px;
-  border-top-left-radius: 5px;
-} */
-
-.btn{
-  width: 100px;
-  height: 40px;
-  background: #0eec19;
-  border: 2px solid #0eec19;
-  margin-top: 13px;
-  color: #fff;
-  font-size: 15px;
-  border-bottom-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  transition: 0.2s ease;
-  cursor: pointer;
-}
-.btn:hover{
-  color: #000;
-}
-
-.btn:focus{
-  outline: none;
-}
-
-.srch:focus{
-  outline: none;
+  height:75vh;
+  width:auto;
 }
 .content{
-  width: 100%;
-  /* height:109vh; */
-  /* margin-top: 200px; */
+  float: left;
+  width:auto;
+  height:75vh;
   color: #fff;
-  position:initial;
+
 
 }
 .content h1{
-  font-family: 'Times New Roman';
+  font-family:Arial, Helvetica, sans-serif;
   font-size: 50px;
   padding-left: 20px;
-  margin-top: 30%;
-  margin-left:0%;
-  right:100px;
-  position:relative;
-  letter-spacing: 2px;
+  margin-top: 20%;
+  margin-left:10%;
+  letter-spacing: 3px;
 
 }
 .content .par{
   font-family: 'Times New Roman';
   font-size: large;
-  padding-left: 0px;
-  padding-bottom: 25px;
+  /* padding-left: 20px; */
+  margin-left: 120px;
+  margin-top: 25px;
+
   letter-spacing: 1.2px;
   line-height: 30px;
 
 }
-
-
-
-/* .content .cn{
-  width: 160px;
-  height: 40px;
-  background: #0eec19;
-  border: none;
-  margin-bottom: 10px;
-  margin-left: 20px;
-  font-size: 18px;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: .4s ease;
-
-} */
-
-/* .content .cn a{
-  text-decoration: none;
-  color: #000;
-  transition: .3s ease;
-}
-
-.cn:hover{
-  background-color: #fff;
-} */
-
 .content span{
   color: #0eec19;
-  font-size: 50px
+  font-size: 53px
 }
-
 .form{
+  float: right;
   width: 250px;
   height: 400px;
   background: linear-gradient(to top, rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%);
-  position:absolute;
-  top: 250px;
-  left: 850px;
+  /* top: 250px;
+  left: 850px; */
+  /* margin-left: 800px; */
+  margin-top: 200px;
+  margin-right: 40px;
   transform: translate(0%,-5%);
   border-radius: 10px;
   padding: 25px;
@@ -203,9 +89,35 @@ ul li a:hover{
   outline: none;
 }
 
-::placeholder{
+
+
+
+
+
+
+.btn{
+  width: 100px;
+  height: 40px;
+  background: #0eec19;
+  border: 2px solid #0eec19;
+  margin-top: 13px;
   color: #fff;
-  font-family: Arial;
+  font-size: 15px;
+  border-bottom-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  transition: 0.2s ease;
+  cursor: pointer;
+}
+.btn:hover{
+  color: #000;
+}
+
+.btn:focus{
+  outline: none;
+}
+
+.srch:focus{
+  outline: none;
 }
 
 .btnn{
@@ -230,6 +142,7 @@ ul li a:hover{
   font-weight: bold;
 }
 .form .link{
+  color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 17px;
   padding-top: 40px;
@@ -239,26 +152,8 @@ ul li a:hover{
   text-decoration: none;
   color: #0eec19;
 }
-.liw{
-  padding-top: 15px;
-  padding-bottom: 10px;
-  text-align: center;
-}
-.container {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  padding-top: 25px;
-  margin-bottom: 0px;
-  cursor: pointer;
-  font-size: 18px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
 .checkbox{
-  /* background-color: rgb(255, 255, 255); */
+
   width:250px;
   height:1px;
   margin-top: 0px;
@@ -271,9 +166,12 @@ ul li a:hover{
   margin-top: 20px;
 }
 .checkbox label{
+  color: white;
  right:100px;
  padding-left:20px;
 }
+
+
 .forgot{
   width: 250px;
   height:15px;
@@ -283,50 +181,110 @@ ul li a:hover{
 .forgot a{
   color: #ff7200;
 }
-.features ul {
-  margin: 80px 0;
+
+
+.wrapper{
+  height: auto;
+  width: 100%;
+  /* padding: 0px 180px; */
+
 }
-.features ul li {
-  width: 300px;
-  padding-top: 140px;
-  float: left;
-  margin-right: 10px;
-  text-align: center;
-}
-/* .features ul li .feature-1 {
-  background: url('src/assets/img/footer-background.png') no-repeat top center;
-} */
-/* .features ul li.feature-2 {
-  background: url('../images/features-icon-2.png') no-repeat top center;
-}
-.features ul li.feature-3 {
-  background: url('../images/features-icon-3.png') no-repeat top center;
-} */
  .wrapper ul{
-  float: left;
+  /* float: left; */
   display:flex;
   justify-content: center;
   align-items: center;
-  margin-top: 350px;
+  margin-top: 0px;
+
+
 }
 
 .wrapper ul li{
   list-style: none;
-  margin-left: 80px;
+  margin-left: 60px;
   font-size: 35px;
+
+  padding:15px 10px;
 }
 
 .wrapper ul li h4{
   text-decoration: none;
-  color: #fff;
+  color:rgb(233, 233, 236);
   font-family:Arial, Helvetica, sans-serif;
   font-weight: bold;
   transition: 0.4s ease-in-out;
+  margin-top: 20px;
 }
 
 .wrapper ul li h4:hover{
-  color: #fa9006fa;
+  color: #ee8c0def;
 }
 
+.feature-1 {
+  background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
+  border-radius: 30%;
+  height: 100px;
+  width: 200px;
+
+}
+.feature-2 {
+  background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
+  border-radius: 30%;
+  height: 100px;
+  width: 205px;
+}
+.feature-3 {
+  background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
+  border-radius: 30%;
+  height: 100px;
+  width: 205px;
+}
+footer {
+  background:linear-gradient(to top right,rgb(251, 249, 249),rgba(147, 180, 27, 0.5));
+  padding: 60px 0;
+  /* background: url('src/assets/img/footer-background.png'); */
+ background-position: center;
+ height: 21vh;
+}
+.footimg{
+  background: url('src/assets/img/footimages.jpg');
+  height: 150px;
+  width: 150px;
+  position: absolute;
+  float: left;
+}
+.footer-info {
+  color: rgb(7, 7, 7);
+  width: 380px;
+  float: left;
+  margin-top:180px;
+
+}
+.footer-links {
+  color:rgb(3, 3, 3);
+  width: 520px;
+  float:right;
+  margin-top: 20px;
+}
+.footer-links ul {
+
+  font-size: large;
+  width: 150px;
+  float:left;
+  margin-left: 20px;
+}
+.footer-links ul li {
+  color: rgb(5, 5, 5);
+  margin: 10px 0;
+}
+.footer-links ul li h5{
+  color: rgb(12, 12, 11);
+  font-size: x-large;
+
+}
+.footer-links ul li a{
+  color:rgb(8, 8, 8);
+
+}
 
 
