--- a/src/app/Contact/homepage/homepage.component.html
+++ b/src/app/Contact/homepage/homepage.component.html
@@ -8,85 +8,108 @@
 <header></header>
 
 <body>
-  <div class="main">
-    <!-- <div class="navbar">
-      <div class="icon">
-        <h2 class="logo">Tutors</h2>
-      </div>
-      <div class="menu">
-        <ul>
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">SERVICE</a></li>
-          <li><a href="#">ABOUT</a></li>
-          <li><a href="#">CONTACT US</a></li>
-        </ul>
-      </div>
 
-      <div class="search">
-        <input class="srch" type="search" name="" placeholder="Type To text">
-        <a href="#"> <button class="btn">Search</button></a>
-      </div>
-    </div> -->
+  <div class="main">
+
     <div class="content">
-      <h1>Contact Application<br><span>Management</span> <br>Service</h1><br><br>
+      <h1><span>Contact Application</span><br>Management<br>Service
+      </h1>
       <p class="par">Presenting the Contact Book application.<br> This application will help us to manage our contacts.
       </p>
+    </div>
 
-      <!-- <button class="cn"><a href="#">JOIN US</a></button> -->
+    <div class="form">
+      <h2>Login Here</h2>
+      <input type="email" name="email" placeholder="Enter Email Here">
+      <input type="password" name="" placeholder="Enter Password Here">
+      <button class="btnn"><a routerLink="../contactinfo">Login</a></button>
+      <router-outlet></router-outlet>
 
-      <div class="form">
-        <h2>Login Here</h2>
-        <input type="email" name="email" placeholder="Enter Email Here">
-        <input type="password" name="" placeholder="Enter Password Here">
-        <button class="btnn"><a routerLink="../contactinfo">Login</a></button>
-        <router-outlet></router-outlet>
-
-        <div class="checkbox">
-          <input id="check1" type="checkbox" class="styled" checked>
-          <label for="check1">Remember me</label>
-
-
-        </div>
-        <div class="forgot"><a href="#">Forgot Password ?</a></div>
-
-
-        <p class="link">Don't have an account ?<br>
-          <a routerLink="../register">Sign up </a> here
-
-
-        </p>
-
-
+      <div class="checkbox">
+        <input id="check1" type="checkbox" class="styled" checked>
+        <label for="check1">Remember me</label>
 
 
       </div>
+      <div class="forgot"><a href="#">Forgot Password ?</a></div>
+
+
+      <p class="link">Don't have an account ?<br>
+        <a routerLink="../register">Sign up </a> here
+
+
+      </p>
+
+
+
+
     </div>
   </div>
 
-
-  <div id="features">
+  <div id="features" class="entity">
     <div class="wrapper">
-        <ul>
-            <li class="feature-1">
-                <h4>Easy to Use</h4>
 
-            </li>
-            <li class="feature-2">
-                <h4>Enhanced Security</h4>
 
-            </li>
-            <li class="feature-3">
-                <h4>Ready to Go</h4>
+      <ul>
+        <li class="feature-1">
 
-            </li>
-            <div class="clear"></div>
-        </ul>
+          <h4>Easy to Use</h4>
+
+        </li>
+        <li class="feature-2">
+
+          <h4>Easy to Run</h4>
+
+        </li>
+        <li class="feature-3">
+
+          <h4>Easy to Call</h4>
+
+        </li>
+        <div class="clear"></div>
+      </ul>
     </div>
-</div>
+  </div>
 
 
 
 
 </body>
+
+<footer>
+
+  <div class="foot">
+    <div class="footimg"></div>
+    <div class="footer-info">
+        <p>Copyright 2014 CompanyName. All rights reserved.</p>
+        <p><a href="#">Terms of Service</a> I <a href="#">Privacy</a></p>
+    </div>
+    <div class="footer-links">
+        <ul>
+            <li><h5>Quick Links</h5></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Sign In</a></li>
+            <li><a href="#">Sign Up</a></li>
+            <li><a href="#">About Us</a></li>
+        </ul>
+        <ul>
+            <li><h5>Company</h5></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Meet The Team</a></li>
+            <li><a href="#">What We Do</a></li>
+            <li><a href="#">Careers</a></li>
+        </ul>
+        <ul>
+            <li><h5>Company</h5></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Meet The Team</a></li>
+            <li><a href="#">What We Do</a></li>
+            <li><a href="#">Careers</a></li>
+        </ul>
+    </div>
+    <div class="clear"></div>
+</div>
+</footer>
+
 
 </html>
