--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,71 +1,70 @@
 *{
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
 header{
 
   height: 70px;
-  width: 100%;
-  background-color: rgba(58, 140, 233, 0.308);
+
+  background:linear-gradient(to top right,rgba(252, 246, 246, 0.5),rgba(163, 204, 16, 0.5));
+
 }
 
-/* .main{
-  width: 100%;
+.main{
+  width:auto;
+  height:auto;
 
-  background-position: center;
-  background-size: cover;
-  height: 110vh;
-} */
+}
 .navbar{
-  width: 1270px;
-  height: 50px;
+  width: auto;
+  height:auto;
   margin: auto;
 
 }
-
+/*
 .icon{
-  width: 200px;
-  float: left;
-  height: 70px;
-  margin-left: 20px;
-
+  width: 10px;
+  height: 10px;
+position: relative;
 }
 
 .logo{
   color: #060706;
   font-size: 35px;
-  font-family: Arial;
-  padding-left: 20px;
-  float: left;
-  /* padding-top:50%;
-  padding-bottom: 50%; */
-  margin-top: 10px;
+  font-family:Arial, Helvetica, sans-serif;
+  padding: auto;
+
 }
+.icon h2{
+  color: rgb(9, 10, 10);
+
+} */
 .menu{
-  width: 700px;
-  float: left;
+  width: 100%;
+
 
 }
 ul{
-  float: left;
+  /* float: left; */
   display:flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10px;
+
 }
+
 
 ul li{
   list-style: none;
   margin-left: 80px;
-  margin-top: 20px;
+  margin-top: 30px;
   font-size: 14px;
 }
 
 ul li a{
   text-decoration: none;
   color: rgb(12, 11, 11);
-  font-family: Arial;
-  font-weight: bold;
+  font-family:Arial, Helvetica, sans-serif;
+  font-weight: bolder;
   transition: 0.4s ease-in-out;
 }
 
@@ -73,10 +72,15 @@ ul li a:hover{
   color: #f6faf6;
 }
 body{
-  width: 100%;
+  height:100vh;
+  width:100%;
+
   background:url('src/assets/img/1.png');
-  background-position: center;
-  background-size: cover;
-  height: 109vh;
+  background-position:center;
+  background-size:contain;
+  /* position:relative; */
+  /* background-color: blueviolet; */
+  z-index: 1;
 }
+
 
